--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -396,7 +396,7 @@ a.button.hvr-bounce-to-right.button-primary:hover {
     color: #fff;
 }
 .single-header-bottom .content p{
-    margin-bottom:5px;
+	margin-bottom:5px;
 }
 
 .single-header-bottom .icon {
@@ -626,7 +626,7 @@ section.get-consultation-section:before {
 
 section.loan-process-section {
     background-color: #f7f8fa;
-    padding-bottom: 160px;
+    padding-bottom: 40px;
 }
 
 .proces-icon {
@@ -656,7 +656,7 @@ section.loan-process-section {
     counter-reset: section;
 }
 
-.process-list .process:before {
+/**.process-list .process:before {
     position: absolute;
     counter-increment: section;
     content: counter(section);
@@ -674,7 +674,7 @@ section.loan-process-section {
     margin-left: -20px;
     transition: .4s
 }
-
+**/
 .process-list .process:after {
     width: 100%;
     content: "";
@@ -867,6 +867,10 @@ section.loan-calculator:before {
 .form-title {
     margin-bottom: 40px;
     text-align: center;
+}
+
+label{
+    color: black;
 }
 
 .single-select label {
@@ -1310,7 +1314,7 @@ section.footer-area.section-padding {
 }
 
 
-.copyright-text p{
+.copyright-text p{ 
     margin-bottom: 0;
 }
 
@@ -2033,7 +2037,7 @@ button.btn.applybtn.btn-default.btn-sm:hover {
     font-size: 50px;
     line-height: 100px;
     color: #3a7cdd;
-    border: 4px solid transparent;
+    border: 4px solid transparent;    
 }
 
 .single-improvement h4 {
@@ -2648,6 +2652,4 @@ section.testimonial-page.section-padding {
     margin-bottom: 0 !important;
 }
 
-.fa-car:before{content:"\f1b9"}
-.error { color:#ff0000; }
 /*end of css for check box*/
